# mads-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
src/mads/: console.py
src/mads/cli/: args.py  command.py  main.py
src/mads/cli/commands/: __init__.py  docker.py  environ.py  github.py  kube.py  setup.py  tag.py  yq.py
src/mads/environ/: __init__.py  codebuild.py  docker.py  git.py  github.py  in_out.py  resources.py
src/mads/environ/runners/: __init__.py  codebuild.py  github_actions.py  local.py  runner.py
src/mads/lib/: __init__.py  classproperty.py  dicts.py  path.py
test/: conftest.py
test/mads/: test_cli.py  test_shell.py
test/mads/environ/: test_docker.py  test_git.py  test_runners.py
