[project]
name = "mads-cli"
description = "A command line interface for MADS tools"
requires-python = ">=3.9"
version = "0.1.0"
authors = [
  { name = "Violet Shreve", email = "shreve@umich.edu" }
]
dependencies = [
  "boto3",
  "ghapi",
  "pydantic<2",
  "psutil",
  "pyjwt",
  "ruamel.yaml",
]

[project.scripts]
mads = "mads.cli:main"

[project.urls]
Homepage = "https://github.com/umsi-mads/mads-cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
